# memory-agents

./: .env.example  .env.local  .gitignore  .gitmodules  README.md  docker-compose-workflow.yml  docker-compose.override.private.yml  docker-compose.yml  index.html  memory_agents.html  pyproject.toml  search.js
memory_agents/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.html  config.py  core.html  longmemeval.html  main.py  mypy.ini  pyproject.toml  tests.html  ty.toml
memory_agents/chroma_memory_db/: chroma.sqlite3
memory_agents/core/: agents.html  chroma_db_manager.html  chroma_db_manager.py  config.html  config.py  middleware.html  run_agent.html  run_agent.py  utils.html  utils.py
memory_agents/core/agents/: __init__.py  baseline.html  baseline.py  baseline_vdb.html  baseline_vdb.py  clearable_agent.py  graphiti.html  (+6 more)
memory_agents/graphiti_vdb_chroma_memory_db/: chroma.sqlite3
memory_agents/longmemeval/: .gitignore  README.md  answerGeneration.py  answer_generation_and_evaluation.html  answer_generation_and_evaluation.py  my_predictions.jsonl  my_predictions.jsonl.Results_Summary.txt  my_predictions.jsonl.eval-results-gpt-4o  parse_result.html  parse_result.py  requirements-lite.txt  subset.txt
memory_agents/tests/: agent_initialization_test.html  agent_initialization_test.py  agent_memory_test.html  agent_memory_test.py  agent_query_test.html  agent_query_test.py  graphiti_tools_available_test.html  graphiti_tools_available_test.py  vdb_clear_collection_test.html  vdb_clear_collection_test.py
memory_agents/utils/: openaiagent.py
(+52 files in other folders)
