[project]
name = "memory-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "backoff>=2.2.1",
    "langchain>=1.1.0",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-openai>=1.1.0",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "packaging>=25.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "requests>=2.31.0",
    "ruff>=0.14.6",
    "tqdm>=4.67.1",
    "langfuse>=3.10.1",
    "flashrank>=0.2.10",
    "langchain-community>=0.4.1",
]
